# baiscope-scraper

./: .env.example  .gitignore  .replit  CINERU_GUIDE.md  COOKIE_GUIDE.md  D1_ANALYSIS_RESULTS.md  D1_PERMISSIONS_FIX.md  DEPLOY_GUIDE.md  FLARESOLVERR_GUIDE.md  NEW_DEPLOY.md  README.md  RENDER_DEPLOY.md  analyze_d1.py  analyze_sites.py  app.py  check_d1_schema.py  check_subz_data.py  cineru_scraper.py  cineru_scraper_v2.py  config.json  crawl_subz.py  d1_database.py  database.py  debug_subz_crawler.py  generate_session.py  gunicorn.conf.py  main.py  migrate_d1.py  monitor_both.py  multi_site_scraper.py main.py  new_app.py  new_scraper.py  process_subz.py  pyproject.toml  render.yaml  replit.md  requirements.txt  scrape_subz_full.py  scraper_utils.py  start.sh  (+7 more)
.github/workflows/: scraper.yml
attached_assets/: Pasted--127-0-0-1-14-Dec-2025-12-20-17-1765714909311_1765714909311.txt  Pasted--Deploying-Uploaded-in-10-2s-Compression-took-3-2s-Buil_1765714122169.txt  Pasted--return-bootstrap-gcd-import-name-level-package-level--_1766637606217.txt  Pasted-2025-12-14-12-51-26-251-INFO-Fetching-https-www-baiscop_1765716884872.txt  Pasted-2025-12-14-13-30-40-352-INFO-Found-124-new-links-on-cat_1765719960491.txt  Pasted-import-cloudscraper-from-bs4-import-BeautifulSoup-impor_1765710560904.txt
