[project]
name = "subtitle-scraper"
version = "0.1.0"
description = "Scraper for subtitle sites (biscope.lk, subz.lk, zoom.lk)"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pytelegrambotapi>=4.12.0",
]
